# backend_course

./: .env.docker  .env.example  .gitignore  .test.env.example  Dockerfile  README.md  alembic.ini  celerybeat-schedule.db  docker-compose.yml  hotels.py  main.py  pyproject.toml
app/: config.py  database.py  dependencies.py  exceptions.py  main.py  setup.py
app/api/: auth.py  bookings.py  dependencies.py  facilities.py  hotels.py  images.py  logs.py  rooms.py
app/connectors/: elasticsearch_connector.py  mongo_connector.py  redis_connector.py
app/core/: exceptions.py
app/elasticsearch/: transfer.py
app/kafka/: booking_consumer.py  consumer.py  producer.py
app/middleware/: logging.py
app/migrations/: env.py
app/migrations/versions/: 046b707327b1_add_rooms.py  2025_04_21_2233-8401c85b8f95_add_rooms.py  2025_04_28_2245-d2ac5fede729_add_users.py  2025_04_29_1110-f12f8b52ac10_add_unique_email.py  2025_05_01_2129-c0c1905d4564_fix_rooms_description.py  2025_05_05_0911-5332fb026f84_add_bookings.py  2025_05_10_2005-2ae254ef0230_add_facilities.py  5124f6fc5d59_initial_migration.py
app/models/: __init__.py  bookings.py  facilities.py  hotels.py  rooms.py  users.py
app/repositories/: base.py  bookings.py  facilities.py  hotels.py  rooms.py  users.py  utils.py
app/repositories/mappers/: base.py  mappers.py
app/schemas/: bookings.py  facilities.py  rooms.py  users.py
app/services/: auth.py  base.py  bookings.py  facilities.py  hotels.py  images.py  rooms.py
app/tasks/: celery_app.py  tasks.py
app/utils/: db_manager.py
repositories/: base.py  hotels.py  rooms.py
tests/: conftest.py
tests/integration_test/: test_auth.py
tests/integration_test/bookings/: test_api.py  test_db.py
tests/integration_test/facilities/: test_api.py
tests/integration_test/hotels/: test_api.py  test_db.py
tests/integration_test/user/: test_api.py
tests/integration_test/users/: test_api.py
tests/unit_test/: test_auth.py
