[project]
name = "backend-course"
version = "0.1.0"
description = ""
authors = [
    {name = "Roman Skvortsov",email = "roman.skwortsoff@mail.ru"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.1,<0.35.0"
pydantic = ">=2.11.3,<3.0.0"
pydantic-settings = ">=2.9.1,<3.0.0"
sqlalchemy = ">=2.0.40,<3.0.0"
alembic = ">=1.15.2,<2.0.0"
asyncpg = "^0.30.0"
black = "^25.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
